admin / users / mail

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -94,7 +94,7 @@
       <p>©<%= Time.now.year %> - Omniscient Design</p>
     </div>
   </div>
-
+</header>
   <!-- Header version mobile -->
 <div class="header-mobile">
   <header>
@@ -163,4 +163,4 @@
       </ul>
     </nav>
   </header>
-</header>
+</div>
