--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,104 +1,118 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-  </head>
-  <body style="margin:0; padding:0; background-color:#f4f4f4; font-family:Arial, sans-serif;">
-    <table align="center" width="680" cellpadding="0" cellspacing="0" style="margin:40px auto; background:#ffffff; border-radius:12px;">
-      <tr>
-        <td style="padding:40px;">
+<head>
+  <meta charset="UTF-8" />
+</head>
+<body style="margin:0; padding:0; background-color:#f4f4f4; font-family:Arial, sans-serif;">
+  <table align="center" width="680" cellpadding="0" cellspacing="0" style="margin:40px auto; background:#ffffff; border-radius:12px;">
+    <tr>
+      <td style="padding:40px;">
 
-          <!-- Logo -->
-          <a href="https://omniscientdesign.fr" target="_blank" style="text-decoration:none; color:#202020;">
-            <table cellpadding="0" cellspacing="0">
-              <tr>
-                <td><img src="https://omniscientdesign.fr/assets/mail-logo.png" alt="Omniscient Design" width="55" style="display:block; border:0;" /></td>
-                <td style="padding-left:12px; font-size:24px; font-weight:600; color:#202020;">
-                  Omniscient<br/>Design
-                </td>
-              </tr>
-            </table>
-          </a>
-
-          <!-- Titre -->
-          <p style="margin:50px 0 20px 0;"><%= t("mailer.reset_password.welcome") %></p>
-          <h2 style="font-size:28px; text-transform:uppercase; color:#202020;">
-            <%= t("mailer.reset_password.title") %>
-          </h2>
-
-          <!-- Texte -->
-          <p style="font-size:16px; line-height:1.5; color:#52525D;">
-            <%= t("mailer.reset_password.greeting") %>
-            <strong style="color:#202020;">
-              <%= @user.firstname.presence || @user.pseudo.presence || @user.email %>,
-            </strong>
-          </p>
-
-          <p style="font-size:16px; line-height:1.5; color:#52525D;"><%= t("mailer.reset_password.body_intro") %></p>
-          <p style="font-size:16px; line-height:1.5; color:#52525D;"><%= t("mailer.reset_password.body_action") %></p>
-
-          <!-- Bouton -->
-          <table align="center" cellpadding="0" cellspacing="0" style="margin:30px auto;">
+        <!-- Logo -->
+        <a href="https://omniscientdesign.fr" target="_blank" style="text-decoration:none; color:#202020;">
+          <table cellpadding="0" cellspacing="0">
             <tr>
-              <td align="center" bgcolor="#202020" style="border-radius:5px;">
-                <a href="<%= edit_password_url(@user, reset_password_token: @token) %>"
-                   style="display:inline-block; padding:16px 30px; font-size:16px; font-weight:500; color:#ffffff; text-decoration:none;">
-                  <%= t("mailer.reset_password.button") %>
-                </a>
+              <td><img src="https://omniscientdesign.fr/assets/mail-logo.png" alt="Omniscient Design" width="55" style="display:block; border:0;" /></td>
+              <td style="padding-left:12px; font-size:24px; font-weight:600; color:#202020;">
+                Omniscient<br/>Design
               </td>
             </tr>
           </table>
+        </a>
 
-          <p style="font-size:15px; color:#52525D;"><%= t("mailer.reset_password.validity_html", hours: Devise.reset_password_within.inspect.to_i).html_safe %></p>
+        <!-- Texte d’introduction -->
+        <p style="margin:30px 0 10px 0; font-size:16px; line-height:1.5; color:#52525D;">
+          <%= t("mailer.reset_password.top") %>
+        </p>
 
-          <p style="font-size:15px; color:#52525D;">
+        <!-- Titre -->
+        <h2 style="font-size:28px; text-transform:uppercase; margin:0 0 20px 0; color:#202020;">
+          <%= t("mailer.reset_password.title") %>
+        </h2>
+
+        <!-- Salutation -->
+        <p style="font-size:16px; line-height:1.5; color:#52525D;">
+          <%= t("mailer.reset_password.greeting") %> <strong color="#202020">  <%= @user.firstname.presence || @user.pseudo.presence || @user.email %></strong>,
+        </p>
+
+        <!-- Texte de présentation -->
+        <p style="font-size:16px; line-height:1.5; color:#52525D;">
+          <%= t("mailer.reset_password.body_intro") %>
+        </p>
+
+        <p style="font-size:16px; line-height:1.5; color:#52525D;">
+          <%= t("mailer.reset_password.body_action") %>
+        </p>
+
+        <!-- Bouton -->
+        <table align="center" cellpadding="0" cellspacing="0" style="margin:30px auto;">
+          <tr>
+            <td align="center" bgcolor="#202020" style="border-radius:5px;">
+              <a href="<%= edit_password_url(@user, reset_password_token: @token) %>"
+                   style="display:inline-block; padding:16px 30px; font-size:16px; font-weight:500; color:#ffffff; text-decoration:none;">
+                  <%= t("mailer.reset_password.button") %>
+                </a>
+            </td>
+          </tr>
+        </table>
+         <p style="font-size:15px; color:#52525D;"><%= t("mailer.reset_password.validity_html", hours: Devise.reset_password_within.inspect.to_i).html_safe %></p>
+
+
+        <p style="font-size:15px; color:#52525D;">
             <%= t("mailer.reset_password.help_html",
                 email: mail_to("contact@omniscientdesign.fr", "contact@omniscientdesign.fr", style:"color:#202020; text-decoration:underline;")).html_safe %>
           </p>
 
-          <p style="font-style:italic; color:#202020; margin-top:30px;">
-            <%= t("mailer.reset_password.signature") %><br/>
-            <strong><%= t("mailer.reset_password.team") %> <a href="https://omniscientdesign.fr" target="_blank" style="color:#202020;">Omniscient Design</a></strong>
-          </p>
+        <!-- Signature -->
+        <p style="font-style:italic; color:#202020; margin-top:30px;">
+         <%= t("mailer.reset_password.signature") %><br/>
+          <strong>
+            <%= t("mailer.reset_password.team") %>
+            <a href="https://omniscientdesign.fr" target="_blank" style="color:#202020;">
+              <%= t("mailer.reset_password.od") %>
+            </a>
+          </strong>
+        </p>
 
-          <!-- Pied avec background -->
-          <table align="center" cellpadding="0" cellspacing="0" width="100%"
-                style="background-color:#F8F8F8; border-radius:12px; padding:30px; margin-top:30px;">
-            <tr>
-              <td align="center">
+        <!-- Footer -->
+        <table align="center" cellpadding="0" cellspacing="0" width="100%"
+               style="background-color:#F8F8F8; border-radius:12px; padding:30px; margin-top:30px;">
+          <tr>
+            <td align="center">
 
-                <!-- Réseaux sociaux -->
-                <table align="center" cellpadding="0" cellspacing="0" style="margin-bottom:24px;">
-                  <tr>
-                    <td><a href="https://omniscientdesign.fr/" target="_blank"><img src="https://omniscientdesign.fr/assets/link.png" alt="Site" width="30" style="display:block;border:0;"></a></td>
-                    <td style="width:10px;"></td>
-                    <td><a href="https://www.instagram.com/omniscientdesign_/" target="_blank"><img src="https://omniscientdesign.fr/assets/instagram.png" alt="Instagram" width="40" style="display:block;border:0;"></a></td>
-                    <td style="width:10px;"></td>
-                    <td><a href="https://www.linkedin.com/company/omniscient-design/" target="_blank"><img src="https://omniscientdesign.fr/assets/linkedin.png" alt="LinkedIn" width="40" style="display:block;border:0;"></a></td>
-                    <td style="width:10px;"></td>
-                    <td><a href="https://www.tiktok.com/@omniscientdesign_" target="_blank"><img src="https://omniscientdesign.fr/assets/tiktok.png" alt="TikTok" width="40" style="display:block;border:0;"></a></td>
-                    <td style="width:10px;"></td>
-                    <td><a href="mailto:contact@omniscientdesign.fr"><img src="https://omniscientdesign.fr/assets/mail.png" alt="Email" width="40" style="display:block;border:0;"></a></td>
-                  </tr>
-                </table>
+              <!-- Réseaux sociaux -->
+              <table align="center" cellpadding="0" cellspacing="0" style="margin-bottom:24px;">
+                <tr>
+                  <td><a href="https://omniscientdesign.fr/" target="_blank"><img src="https://omniscientdesign.fr/assets/link.png" alt="Site" width="30" style="display:block;border:0;"></a></td>
+                  <td style="width:10px;"></td>
+                  <td><a href="https://www.instagram.com/omniscientdesign_/" target="_blank"><img src="https://omniscientdesign.fr/assets/instagram.png" alt="Instagram" width="40" style="display:block;border:0;"></a></td>
+                  <td style="width:10px;"></td>
+                  <td><a href="https://www.linkedin.com/company/omniscient-design/" target="_blank"><img src="https://omniscientdesign.fr/assets/linkedin.png" alt="LinkedIn" width="40" style="display:block;border:0;"></a></td>
+                  <td style="width:10px;"></td>
+                  <td><a href="https://www.tiktok.com/@omniscientdesign_" target="_blank"><img src="https://omniscientdesign.fr/assets/tiktok.png" alt="TikTok" width="40" style="display:block;border:0;"></a></td>
+                  <td style="width:10px;"></td>
+                  <td><a href="mailto:contact@omniscientdesign.fr"><img src="https://omniscientdesign.fr/assets/mail.png" alt="Email" width="40" style="display:block;border:0;"></a></td>
+                </tr>
+              </table>
 
-                <!-- Liens légaux -->
-                <p style="text-align:center; font-size:14px; margin:0 0 16px 0; color:#202020;">
-                  <a href="https://omniscientdesign.fr/mentionslegales" style="color:#202020; text-decoration:underline;"><%= t("mailer.reset_password.legales") %></a> |
-                  <a href="https://omniscientdesign.fr/politiquedeconfidentialite" style="color:#202020; text-decoration:underline;"><%= t("mailer.reset_password.politique") %></a> |
-                  <a href="https://omniscientdesign.fr/cgu" style="color:#202020; text-decoration:underline;"><%= t("mailer.reset_password.cgu") %></a>
-                </p>
+              <!-- Liens légaux -->
+              <p style="text-align:center; font-size:14px; margin:0 0 16px 0; color:#202020;">
+                <a href="https://omniscientdesign.fr/mentionslegales" style="color:#202020; text-decoration:underline;"><%= t("mailer.reset_password.legales") %></a> |
+                <a href="https://omniscientdesign.fr/politiquedeconfidentialite" style="color:#202020; text-decoration:underline;"><%= t("mailer.reset_password.politique") %></a> |
+                <a href="https://omniscientdesign.fr/cgu" style="color:#202020; text-decoration:underline;"><%= t("mailer.reset_password.cgu") %></a>
+              </p>
 
-                <!-- Copyright -->
-                <p style="text-align:center; font-size:14px; color:#202020; margin:0;">
-                  <%= t("mailer.reset_password.all_rights_reserved", year: Time.current.year) %>
-                </p>
+              <!-- Copyright -->
+              <p style="text-align:center; font-size:14px; color:#202020; margin:0;">
+                <%= t("mailer.reset_password.all_rights_reserved", year: Time.current.year) %>
+              </p>
 
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-  </body>
+            </td>
+          </tr>
+        </table>
+
+      </td>
+    </tr>
+  </table>
+</body>
 </html>
