--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,18 @@
   }
 </style>
 <section class="top-default-page">
+   <%= link_to root_path, class: ("active" if @current_page == "users") do %>
+   <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_3256_104)">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M18 0C27.9345 0 36 8.0655 36 18C36 27.9345 27.9345 36 18 36C8.0655 36 0 27.9345 0 18C0 8.0655 8.0655 0 18 0ZM20.214 22.4325C21.696 21.825 22.8495 20.616 23.388 19.1085L27 9L16.992 12.5805C15.483 13.1205 14.2755 14.277 13.668 15.759L9.0705 27L20.214 22.4325ZM20.031 16.0035C20.8575 16.83 20.8575 18.1725 20.031 18.9975C19.2045 19.824 17.8635 19.824 17.037 18.9975C16.2105 18.1725 16.2105 16.83 17.037 16.0035C17.8635 15.177 19.2045 15.177 20.031 16.0035Z" fill="#FFF"/>
+          </g>
+          <defs>
+            <clipPath id="clip0_3256_104">
+              <rect width="36" height="36" fill="white"/>
+            </clipPath>
+          </defs>
+        </svg>
+   <% end %>
   <h1>Liste des membres</h1>
 </section>
 <section class="grid-1">
@@ -34,27 +46,44 @@
             <td><%= user.pseudo %></td>
             <td><%= user.statut %></td>
             <td><%= user.etablissement&.name %></td>
-            <td>
-              <% if current_user.admin? %>
-               <% if user.banned? %>
-                  <%= link_to 'Débannir', unban_user_path(user), method: :patch, data: { confirm: 'Êtes-vous sûr de vouloir débannir cet utilisateur ?' } %>
-                <% else %>
-                  <%= link_to 'Bannir l\'utilisateur', ban_user_path(user), method: :patch, data: { confirm: 'Êtes-vous sûr de vouloir bannir cet utilisateur ?' } %>
-                <% end %>
-              <% end %>
-            </td>
-            <td><%= user.confirmed? ? 'Oui' : 'Non' %></td>
-            <td>
-              <% if current_user.admin? %>
-                <% if user.certified? %>
-                  <%= link_to 'Décertifier', uncertify_user_path(user), method: :patch, data: { confirm: 'Retirer la certification de cet utilisateur ?' } %>
-                <% else %>
-                  <%= link_to 'Certifier', certify_user_path(user), method: :patch, data: { confirm: 'Certifier cet utilisateur ?' } %>
+           <td>
+            <% if current_user.admin? %>
+              <% if user.banned? %>
+                <%= link_to unban_user_path(user),
+                            data: { turbo_method: :patch, turbo_confirm: "Êtes-vous sûr de vouloir débannir cet utilisateur ?" },
+                            class: "btn btn-success btn-sm" do %>
+                  <i class="fa fa-unlock"></i> Débannir
                 <% end %>
               <% else %>
-                <%= user.certified? ? 'Oui' : 'Non' %>
+                <%= link_to ban_user_path(user),
+                            data: { turbo_method: :patch, turbo_confirm: "Êtes-vous sûr de vouloir bannir cet utilisateur ?" },
+                            class: "btn btn-danger btn-sm" do %>
+                  <i class="fa fa-ban"></i> Bannir l'utilisateur
+                <% end %>
               <% end %>
-            </td>
+            <% end %>
+          </td>
+            <td><%= user.confirmed? ? 'Oui' : 'Non' %></td>
+         <td>
+  <% if current_user.admin? %>
+    <% if user.certified? %>
+      <%= link_to uncertify_user_path(user),
+                  data: { turbo_method: :patch, turbo_confirm: 'Retirer la certification de cet utilisateur ?' },
+                  class: "btn btn-warning btn-sm" do %>
+        Décertifier
+      <% end %>
+    <% else %>
+      <%= link_to certify_user_path(user),
+                  data: { turbo_method: :patch, turbo_confirm: 'Certifier cet utilisateur ?' },
+                  class: "btn btn-primary btn-sm" do %>
+        Certifier
+      <% end %>
+    <% end %>
+  <% else %>
+    <%= user.certified? ? 'Oui' : 'Non' %>
+  <% end %>
+</td>
+
             <td><%= user.created_at.strftime('%d/%m/%Y') %></td>
           </tr>
         <% end %>
@@ -65,39 +94,44 @@
   <div id="map" style="height: 400px;"></div>
 </section>
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
-  // Coordonnées des utilisateurs à charger dynamiquement depuis Rails
+
+  document.addEventListener("turbo:load", () => {
+  // Construction sécurisée des coordonnées utilisateurs
   const userLocations = [
     <% @users.each do |user| %>
-      <% if user.etablissement&.latitude && user.etablissement&.longitude %>
+      <% if user.etablissement&.latitude.present? && user.etablissement&.longitude.present? %>
         {
           name: '<%= j user.firstname %> <%= j user.lastname %>',
-          latlng: [<%= user.etablissement.latitude %>, <%= user.etablissement.longitude %>]
+          latlng: [<%= user.etablissement.latitude.to_f %>, <%= user.etablissement.longitude.to_f %>]
         },
       <% end %>
     <% end %>
   ];
 
-  // Initialisation de la carte Leaflet
-  var map = L.map('map').setView([46.603354, 1.888334], 5); // Centré sur la France
+  console.log("User locations:", userLocations); // Debug
 
-  // Chargement de la carte OpenStreetMap
+  // Initialisation de la carte centrée sur la France
+  var map = L.map('map').setView([46.603354, 1.888334], 5);
+
+  // TileLayer OpenStreetMap
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 18,
+    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
   }).addTo(map);
 
-  // Cluster de marqueurs pour regrouper les utilisateurs à proximité
+  // Création du cluster de marqueurs
   var markers = L.markerClusterGroup();
 
-  // Ajout des marqueurs pour chaque utilisateur
+  // Ajout des marqueurs
   userLocations.forEach(function(user) {
-    var marker = L.marker(user.latlng)
-      .bindPopup(user.name);
-    markers.addLayer(marker);
+    if (user.latlng.length === 2) { // Vérifie que la coordonnée est correcte
+      var marker = L.marker(user.latlng)
+        .bindPopup(`<strong>${user.name}</strong>`);
+      markers.addLayer(marker);
+    }
   });
 
-  // Ajout des marqueurs clusterisés à la carte
+  // Ajout du cluster à la carte
   map.addLayer(markers);
 });
-
 </script>
